--- a/toDoFront/index.html
+++ b/toDoFront/index.html
@@ -5,6 +5,7 @@
     <title>to-do</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.3.11/css/AdminLTE.css">
 
   </head>
   <body>
@@ -12,3 +13,4 @@
     <script src="/dist/build.js"></script>
   </body>
 </html>
+ 
